# MTL

./: .gitignore  AGENTS.md  CMakeLists.txt  MTL.cmake  README.md  RunTests.py  color.py
.github/workflows/: TestCoverageUbuntu.yml  Ubuntu20.yml  Ubuntu22.yml  Ubuntu22_AVX.yml  Windows2019_VS2019.yml  Windows2022_VS2019.yml  Windows2022_VS2022.yml  cmake.yml
ExampleApp/: CMakeLists.txt  Example.cpp
Tests/: CMakeLists.txt  TestAffineTransform3D.cpp  TestAtomic.cpp  TestBase64.cpp  TestBinaryStream.cpp  TestByteSwap.cpp  TestCPU.cpp  TestChipAwayCoverage.cpp  TestDynamicMatrix.cpp  TestDynamicVector.cpp  TestDynamicVectorBranches.cpp  TestEvent.cpp  TestFramework.cpp  TestFrameworkNegative.cpp  TestMath.cpp  TestMatrix.cpp  TestMemoryPool.cpp  TestMutexMP.cpp  TestOptimizerLM.cpp  TestOptions.cpp  TestPoint2D.cpp  TestPolynomial.cpp  TestPool.cpp  TestProgressBar.cpp  TestRotation3D.cpp  TestSVD.cpp  TestSparseMatrix.cpp  TestSparseOptimizerLM.cpp  TestSpinMutex.cpp  TestStream.cpp  TestStreamCoverage.cpp  TestStreamOps.cpp  TestString.cpp  TestWorkerThread.cpp
include/IML/: Image.h
include/MTL/: AVX.h  AffineTransform3D.h  Array.h  ArrayExtra.h  AxisAngle.h  Base64.h  BinaryStream.h  ByteSwap.h  CPU.h  Colors.h  Constants.h  Davis_LDL_COLAMD.h  Definitions.h  DynamicMatrix.h  DynamicVector.h  DynamicVectorOperators.h  Event.h  Exception.h  File.h  Givens.h  Histogram.h  LDLt.h  LargeInteger.h  LinearAlgebra.h  Lock.h  Macros.h  Math.h  Matrix.h  MatrixExtraOperators.h  MemoryPool.h  MutexMP.h  OpenMP.h  OptimizerLevenbergMarquardt.h  OptimizerNonLinearLeastSquares.h  Options.h  Point2D.h  Point3D.h  Polynomial.h  ProgressBar.h  ProjectionToImageTransform.h  (+22 more)
include/MTL/Math/: AVX.h  AffineTransform3D.h  Array.h  ArrayExtra.h  AxisAngle.h  Constants.h  Davis_LDL_COLAMD.h  DynamicMatrix.h  DynamicVector.h  DynamicVectorOperators.h  Givens.h  Histogram.h  LDLt.h  LinearAlgebra.h  Math.h  Matrix.h  MatrixExtraOperators.h  OptimizerLevenbergMarquardt.h  OptimizerNonLinearLeastSquares.h  Point2D.h  Point3D.h  Polynomial.h  ProjectionToImageTransform.h  QR.h  Random.h  Rotation3D.h  RotationTranslation3D.h  SSE.h  SVD.h  SparseMatrix.h  SparseOptimizerLevenbergMarquardt.h  SphereFitLevenbergMarquardt.h  Stream.h  StreamArray.h  StreamMath.h  Trigonometry.h  Vector2D.h  Vector3D.h  sparse.h
include/MTL/Stream/: AVX.h  AVX512.h  SSE.h  Stream.h  StreamArray.h  StreamMath.h
include/MTL/Tools/: Base64.h  Event.h  Lock.h  Pool.h  ProgressBar.h  SpinMutex.h  Test.h  WorkerThread.h
